--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "life_clock",
   "version": "0.1.0",
+  "homepage": "https://andres-al-campos.github.io/LifeClock/",
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
@@ -11,6 +12,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -33,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
