--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "life_clock",
   "version": "0.1.0",
-  "homepage": "https://andres-al-campos.github.io/LifeClock/",
+  "homepage": "https://aidearium.github.io/LifeClock/",
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
